# sandbox

./: pyproject.toml  pytest.ini
API/: conftest.py
API/services/authentication/: authorization_data.py
core/: send_client.py
core/builder/: request_builder.py  request_data.py
core/enums/: links_enum.py  request_enum.py
core/helper/: helper_config_env.py  helper_for_path.py  helper_send_request.py  helper_settings.py
